# rct-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
src/: __init__.py
src/database/: __init__.py  config.py  models.py  operations.py  session.py
src/statistical_analysis/: __init__.py  pipeline.py  plotting.py  report.py  statistical_tests.py  utils.py
src/table_extraction/: __init__.py  extraction.py  utils.py  validate_output.py
src/table_extraction/config/: schema.py
src/table_extraction/config/prompts/: extraction_prompt.txt  repair_prompt.txt
src/table_extraction/llm/: __init__.py  base.py  config.py  huggingface_backend.py  openai_backend.py
tests/: test_main.py
tests/database/: test_operations.py
tests/statistical_analysis/: generate_synthetic_json.py  test_pipeline.py  test_pipeline_synthetic.py  test_plotting.py  test_report.py  test_statistical_tests.py  test_utils.py
tests/table_extraction/: test_extraction_integration.py  test_llm.py  test_utils.py  test_validate_output.py
