[project]
name = "rct-checker"
version = "0.1.0"
description = "A tool for detecting statistical anomalies in randomized controlled trials (RCTs) from medical research papers using automated Table 1 extraction and statistical testing."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Rickard Karlsson", email = "karlsson.rka@gmail.com"},
]
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pymupdf>=1.23.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "scipy>=1.14.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/RickardKarl/rct-checker"
Repository = "https://github.com/RickardKarl/rct-checker.git"
Issues = "https://github.com/RickardKarl/rct-checker/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]
huggingface = [
    "transformers>=4.35.0,<5.0.0",
    "torch>=2.0.0,<3.0.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration_extraction and not integration_statistical_analysis'"
markers = [
    "integration_extraction: integration tests for table extraction (uses LLM calls)",
    "integration_statistical_analysis: integration tests for statistical analysis pipeline",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]  # load_dotenv() must run before src imports
"tests/*" = ["E402"]  # importorskip must run before imports

[tool.black]
line-length = 100
target-version = ["py310"]
